2011-03-09 Alexander Malysh <amalysh at kannel.org>
    * applied patch that adds sqlite3 DB and DLR support. This patch was originally
      contributed by David Butler, posted 2009-11-23 to the list, with Msg-ID
      <22DE7AAC95BA4B5A9EEF3FEC90222162@VAIO>. Stipe added userguide parts and
      fixed destination number prefix handling.

2011-03-08 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.c: applied patch which fixes a rare memory leak.
      When the destroy is called, it extracts until a NULL is found, which may
      not necessarily be the last item in the list as gwlist allows you to add
      NULL items to it.
      Thanks to Donald Jackson <djackson at kannel.org> for this patch.

2011-01-25  Stipe Tolj  <stolj at kannel.org>
    * gwlib/socket.c: fixing memory leak in tcpip_connect_to_server_with_port().
    
2011-01-24 Alexander Malysh <amalysh at kannel.org>
    * gw/bearerbox.c: Added support for HTTP-Proxy.
      Thanks to Christoph Gysin <christoph.gysin at fr33z3.org> for this patch.

2011-01-10 Alejandro Guerrieri <aguerrieri at kannel.org>
    * doc/userguide/userguide.xml: documentation parts for the syslog.
    * gw/[bearer|sms|wap]box.c, gwlib/cfg.def, gwlib/log.[ch]: Extended the 
      syslog functionality already on wapbox to function on the core and 
      smsbox groups as well. Also added the ability to specify the syslog 
      facility to use.
      [Msg-Id: <4CF8F91C.8020206@tolj.org>]

2010-12-17 Alejandro Guerrieri <aguerrieri at kannel.org>
    * contrib/kannel-monitor/index.php: Fixes display bug on kannel monitor.
      Thanks to Mariana Gambande <mlgambande at gmail.com> for this patch.

2010-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: Fixed panic that we destroy message twice. This fixes #582.
      Thanks to Alexey K for bug report.

2010-12-09 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mem.c: fixed PANIC and memleak when flushing dlr_mem. Fixes #581.